added all blogs page to show all of the blogs

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -47,7 +47,7 @@
   <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Sandeep Shiven</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Sandeep Shiven</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -56,17 +56,18 @@
                 <a class="nav-item nav-link" href="https://www.linkedin.com/in/sandeep-shiven" target="_blank">LinkedIn</a>
                 <a class="nav-item nav-link" href="https://github.com/sandeepshiven" target="_blank">Github</a>
                 <a class="nav-item nav-link" href="#" target="_blank">Resume</a>
-                <a class="nav-item nav-link" href="{% url 'allblogs' %}" target="_blank">Blog</a>
+                <a class="nav-item nav-link active" href="#" target="_blank">Blog</a>
               </div>
             </div>
           </nav>
 </header>
 
 <main role="main">
+    <div class="container">
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1>Hi! I am Sandeep Shiven.</h1>
+      <h1>Welcome to my Blog</h1>
       <p class="lead text-muted">Hi! my name is Sandeep Shiven and I love working with python, its libraries and frameworks. Currently I am learing about Django and I completely love it. </p>
       <p>
         <a href="mailto:sandeepshiven0@gmail.com" class="btn btn-primary my-2">E-mail me!</a>
@@ -74,61 +75,30 @@
       </p>
     </div>
   </section>
+  <h1>Latest Posts</h1><hr>
+  <div class = "card-row">
 
-  <u><h1 class ="text-center">Internships</h1> </u>
-        <br>
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">       
-       {% for job in jobs.all %}
+    {% for blog in blogs.all %}
+    <div class="card mb-3 " style="max-width: 100%; max-height:100%;">
+      <div class="row equal no-gutters">
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img class="bd-placeholder-img card-img-top" src = "{{ job.image.url}}"/> 
-            <div class="card-body">
-              <p class="card-text">{{ job.description }}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  
-                </div>
-               
-              </div>
-            </div>
+          <img src="{{ blog.image.url }}" class="card-img img-fluid" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <a href="{{ blog.id }}"><h2 class="card-title">{{ blog.title }}</h2></a>
+            <p class="card-text">{{ blog.summary }}</p>
+            <a href="{{ blog.id }}" class="btn btn-outline-success btn-sm">Read More</a>
+            <p class="card-text"><small class="text-muted">{{ blog.pub_date }}</small></p>
           </div>
         </div>
-        {% endfor %}
       </div>
     </div>
+    {% endfor %}
   </div>
-  <u><h1 class ="text-center">Projects</h1> </u>
-        <br>
-  <div class="album py-5 bg-light">
-    <div class="container">
-
-      <div class="row">       
-        
-        {% for project in projects.all %}
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <a href="{{project.image.url}}" target="_blank"><img class="bd-placeholder-img card-img-top" src="{{project.image.url}}"/></a>
-            <div class="card-body">
-              <p class="card-text">{{project.description}}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="{{project.github_link}}" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Github Link</button></a>
-                 
-                </div>
-                
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-    </div>
-  </div>
-
-
+    <br/>
+    <br/>
+</div>
 </main>
 
 <footer class="text-muted">
