--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,4 +1,4 @@
-
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>My Portfolio</title>
+    <title>Sandeep's Blogs</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -46,7 +46,8 @@
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        d
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-expand-md navbar-dark fixed-top" >
             <a class="navbar-brand" href="{% url 'home' %}">Sandeep Shiven</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -55,16 +56,17 @@
               <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="https://www.linkedin.com/in/sandeep-shiven" target="_blank">LinkedIn</a>
                 <a class="nav-item nav-link" href="https://github.com/sandeepshiven" target="_blank">Github</a>
-                <a class="nav-item nav-link" href="#" target="_blank">Resume</a>
-                <a class="nav-item nav-link active" href="#" target="_blank">Blog</a>
+                <a class="nav-item nav-link" href="{% static 'resume.pdf' %}" target="_blank">Resume</a>
+                <a class="nav-item nav-link active" href="#" >Blog</a>
               </div>
             </div>
           </nav>
+          
 </header>
 
 <main role="main">
     <div class="container">
-
+      <br />
   <section class="jumbotron text-center">
     <div class="container">
       <h1>Welcome to my Blog</h1>
@@ -86,9 +88,9 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <a href="{{ blog.id }}"><h2 class="card-title">{{ blog.title }}</h2></a>
+            <a href="{% url 'detail' blog.id %}"><h2 class="card-title">{{ blog.title }}</h2></a>
             <p class="card-text">{{ blog.summary }}</p>
-            <a href="{{ blog.id }}" class="btn btn-outline-success btn-sm">Read More</a>
+            <a href="{% url 'detail' blog.id %}" class="btn btn-outline-success btn-sm">Read More</a>
             <p class="card-text"><small class="text-muted">{{ blog.pub_date }}</small></p>
           </div>
         </div>
