--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,7 +1,7 @@
-
 <!doctype html>
 <html lang="en">
   <head>
+    {% load static %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -46,7 +46,7 @@
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-expand-md navbar-dark fixed-top">
             <a class="navbar-brand" href="#">Sandeep Shiven</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -55,22 +55,22 @@
               <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" href="https://www.linkedin.com/in/sandeep-shiven" target="_blank">LinkedIn</a>
                 <a class="nav-item nav-link" href="https://github.com/sandeepshiven" target="_blank">Github</a>
-                <a class="nav-item nav-link" href="#" target="_blank">Resume</a>
-                <a class="nav-item nav-link" href="{% url 'allblogs' %}" target="_blank">Blog</a>
+                <a class="nav-item nav-link" href="{% static 'resume.pdf' %}" target="_blank">Resume</a>
+                <a class="nav-item nav-link" href="{% url 'allblogs' %}" >Blog</a>
               </div>
             </div>
           </nav>
 </header>
 
 <main role="main">
-
+    <br />
   <section class="jumbotron text-center">
     <div class="container">
+      <img src="{% static 'portfolio.jpg' %}" heigth=300 width=300 class="rounded-circle"/>
       <h1>Hi! I am Sandeep Shiven.</h1>
       <p class="lead text-muted">Hi! my name is Sandeep Shiven and I love working with python, its libraries and frameworks. Currently I am learing about Django and I completely love it. </p>
       <p>
         <a href="mailto:sandeepshiven0@gmail.com" class="btn btn-primary my-2">E-mail me!</a>
-        
       </p>
     </div>
   </section>
